# niri

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Configuration:-Input.html  Configuration:-Layer-Rules.html  Configuration:-Window-Rules.html  FAQ.html  LUA_CONFIG_STATUS.md  LUA_EMBEDDING.md  LUA_FILES_CHECKLIST.md  LUA_GUIDE.md  LUA_IMPLEMENTATION_ROADMAP.md  LUA_INDEX.md  LUA_INTEGRATION_SUMMARY.md  LUA_QUICKSTART.md  NIRI_LUA_API_SPECIFICATION.md  PREV_SESSION.md  Window-Effects.html  niri.lua  session1.md  sitemap.xml  test_config.lua  test_config_global.lua  test_global_input_config.lua  test_input_config.lua  test_layout_config.lua  test_output_config.lua  test_runtime_api.lua
niri-config/: AGENTS.md  Cargo.toml
niri-config/src/: .lib.rs.pending-snap  animations.rs  animations_lua.rs  appearance.rs  binds.rs  debug.rs  gestures.rs  input.rs  layout.rs  lib.rs  misc.rs  misc_lua.rs  output.rs  output_lua.rs  recent_windows.rs  utils.rs  window_rule_lua.rs
niri-lua/: AGENTS.md  ANALYSIS_REPORT.md  CONFIG_REFACTOR_SPEC.md  Cargo.toml  LUA_GUIDE.md  LUA_QUICKSTART.md  LUA_SPECIFICATION.md  MIGRATION_NOTES.md  README.md  REFACTOR_SPEC.md  TESTING.md  build.rs
niri-lua-derive/: Cargo.toml
niri-lua-derive/src/: attributes.rs  collection_proxy.rs  config_properties.rs  config_proxy.rs  dirty_flags.rs  from_lua_table.rs  lib.rs  lua_enum.rs
niri-lua/src/: accessor_macros.rs  action_proxy.rs  api_data.rs  api_registry.rs  callback_registry.rs  collections.rs  config.rs  config_accessors.rs  config_api.rs  config_converter.rs  config_dirty.rs  config_proxies.rs  config_proxy.rs  config_state.rs  config_wrapper.rs  event_data.rs  event_emitter.rs  event_handlers.rs  event_system.rs  events_proxy.rs  extractors.rs  format_value.lua  fs_utils.rs  hot_reload.rs  ipc_bridge.rs  ipc_repl.rs  lib.rs  loop_api.rs  loop_helpers.lua  lua_api_schema.rs  lua_types.rs  migrated_proxies.rs  module_loader.rs  nice_print.lua  niri_api.rs  os_utils.rs  parse_utils.rs  plugin_system.rs  process.rs  process_api.rs  (+12 more)
niri-lua/src/snapshots/: niri_lua__action_proxy__tests__action_proxy_focus_workspace_index.snap  niri_lua__action_proxy__tests__action_proxy_focus_workspace_name.snap  niri_lua__action_proxy__tests__action_proxy_move_floating_window_complex.snap  niri_lua__action_proxy__tests__action_proxy_move_window_to_workspace.snap  niri_lua__action_proxy__tests__action_proxy_set_column_width_adjust.snap  niri_lua__action_proxy__tests__action_proxy_set_column_width_fixed.snap  niri_lua__action_proxy__tests__action_proxy_set_column_width_proportion.snap  niri_lua__action_proxy__tests__action_proxy_spawn_with_args.snap  niri_lua__api_registry__tests__api_alias_definitions.snap  niri_lua__api_registry__tests__api_alias_names.snap  niri_lua__api_registry__tests__api_function_signatures.snap  niri_lua__api_registry__tests__api_method_signatures.snap  niri_lua__api_registry__tests__api_module_paths.snap  niri_lua__api_registry__tests__api_schema_statistics.snap  niri_lua__api_registry__tests__api_type_names.snap  niri_lua__config_api__tests__animations_global.snap  niri_lua__config_wrapper__tests__animations_slowdown_transformation.snap  niri_lua__event_data__tests__event_categories.snap  (+71 more)
niri-lua/test_fixtures/: relative_requirer.lua  test_config.lua  test_input_config.lua  test_layout_config.lua  test_os_fs_utils.lua  test_output_config.lua  test_runtime_api.lua
niri-lua/tests/: common.rs  integration_tests.rs  repl_integration.rs
niri-lua/types/: api.lua
(+301 files in other folders)
