[package]
name = "niri-config"
version.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
bitflags.workspace = true
csscolorparser = "0.8.1"
knuffel = "3.2.0"
miette = { version = "5.10.0", features = ["fancy-no-backtrace"] }
mlua.workspace = true
niri-ipc = { version = "25.11.0", path = "../niri-ipc" }
niri-lua-derive = { version = "25.11.0", path = "../niri-lua-derive" }
niri-lua-traits = { version = "25.11.0", path = "../niri-lua-traits" }
regex.workspace = true
smithay = { workspace = true, features = ["backend_libinput"] }
tracing.workspace = true
tracy-client.workspace = true

[dev-dependencies]
insta.workspace = true
pretty_assertions = "1.4.1"
diff = "0.1.13"
tempfile = "3.0"
