[package]
name = "niri-lua-derive"
version.workspace = true
description = "Derive macros for niri Lua configuration bindings"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
convert_case = "0.8"
