[package]
name = "niri-lua"
version.workspace = true
description = "Lua scripting API for Niri compositor"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-channel = "2.3.1"
calloop = "0.14.3"
log = { version = "0.4.28", features = ["max_level_trace", "release_max_level_debug"] }
mlua.workspace = true
niri-config = { version = "25.8.0", path = "../niri-config" }
niri-ipc = { version = "25.8.0", path = "../niri-ipc" }
parking_lot = "0.12.3"
regex.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
insta.workspace = true
tempfile = "3.14.0"
