[package]
name = "niri-lua"
version.workspace = true
description = "Lua scripting API for Niri compositor"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-channel.workspace = true
calloop.workspace = true
log.workspace = true
mlua.workspace = true
niri-config = { version = "25.8.0", path = "../niri-config" }
niri-ipc = { version = "25.8.0", path = "../niri-ipc" }

regex.workspace = true

[dev-dependencies]
insta.workspace = true
tempfile = "3.14.0"
