[package]
name = "niri-lua"
version.workspace = true
description = "Lua scripting API for Niri compositor"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-channel.workspace = true
calloop.workspace = true
dirs = "6"
gethostname = "1"
log.workspace = true
mlua.workspace = true
niri-config = { version = "25.8.0", path = "../niri-config" }
niri-ipc = { version = "25.8.0", path = "../niri-ipc" }
niri-lua-derive = { version = "25.11.0", path = "../niri-lua-derive" }

nix = { version = "0.29", features = ["signal", "process"] }

glob = "0.3"
regex.workspace = true
shellexpand = "3"
which = "7"

[dev-dependencies]
insta.workspace = true
tempfile = "3.14.0"
